--- a/src/app/navbar/user-login-navbar/user-login-navbar.component.html
+++ b/src/app/navbar/user-login-navbar/user-login-navbar.component.html
@@ -1,12 +1,12 @@
-<div class="ui fixed inverted menu">
+<div class="ui fixed inverted navbar menu">
     <div class="ui text container">
       <div href="#" class="header item">
         <img class="logo" src="assets/images/logo.png"> Repair Service
       </div>
 
       <div class="ui right floated item">
-        <button class="ui blue button" (click)="login()">Login
-            <app-user-login-modal> </app-user-login-modal>
+        <button class="ui blue button" (click)="login()" id="mon3">Login
+            <!--<app-user-login-modal> </app-user-login-modal>-->
             </button>
       </div>
     </div>
