--- a/src/app/noti/sp-noti/sp-noti.component.css
+++ b/src/app/noti/sp-noti/sp-noti.component.css
@@ -3,3 +3,11 @@
     padding-right: 10px;
     padding-bottom : 4px;
 }
+.ui.list{
+    height :200px;
+    /*width : 500px;*/
+    overflow-y: scroll;
+    word-wrap: break-word;
+    flex: inherit;
+    /*white-space:nowrap;*/
+}
