--- a/src/app/service-provider/sp-homepage/sp-homepage.component.css
+++ b/src/app/service-provider/sp-homepage/sp-homepage.component.css
@@ -3,5 +3,5 @@ td{
 }
 
 .spsegment{
-     background-image: url('/assets/images/ep_naturalwhite.png') !important;
+     background-image: url('/assets/images/ravenna.png') !important;
 }
