--- a/src/app/user/user-search-normal/user-search-normal.component.css
+++ b/src/app/user/user-search-normal/user-search-normal.component.css
@@ -5,7 +5,7 @@
 }
 
 .searchsegment{
-    background-image: url("/assets/images/tree_bark.png") !important;
+    background-image: url('/assets/images/bright_squares.png') !important;
     padding: 30px 50px 30px 50px;
 }
 
