--- a/src/app/noti/sp-notifications/sp-notifications.component.html
+++ b/src/app/noti/sp-notifications/sp-notifications.component.html
@@ -11,17 +11,19 @@
     <div *ngIf="spNoti">
       <div class="ui middle aligned celled selection list">
 
-        <div *ngFor="let noti of spNoti" class="item" (click)="MarkAsRead(noti.$key)">
-          <!--<div *ngIf="noti.read == false">
-      <i class="right floated black circle icon"  id="{{noti.$key}}"></i>
-    </div>
-    <div *ngIf="noti.read == true">
-      <i class="right floated circle thin icon"  id="{{noti.$key}}"></i>
-    </div>-->
+        <div *ngFor="let noti of spNoti" class="item" [routerLink]="['/Sp_Appointment_Detail', noti.notiID]">
+          <div *ngIf="noti.read == false" (click)="MarkAsRead(noti.notiID)" data-tooltip="Mark as read" data-position="top right"
+          data-inverted="">
+            <i class="right floated black circle icon"  id="{{noti.notiID}}" ></i>
+          </div>
+          <div *ngIf="noti.read == true" (click)="MarkAsRead(noti.notiID)" data-tooltip="Mark as unread" data-position="top right"
+          data-inverted="">
+            <i class="right floated circle thin icon"  id="{{noti.notiID}}" ></i>
+          </div>
           <img class="ui avatar image" src="{{noti.userimg}}">
           <div class="content">
 
-            <div *ngIf="noti.state == 'rescheduled'">
+            <!--<div *ngIf="noti.state == 'rescheduled'">
               <div class="header">Your appointment is
                 <a class="ui purple label">
             rescheduled 
@@ -36,7 +38,7 @@
                   <span>{{noti.time}}</span>
                 </div>
               </div>
-            </div>
+            </div>-->
 
             <div *ngIf="noti.state == 'completed'">
               <div class="header">{{noti.username}} has <a class="ui green label"> accepted </a> your rescheduled time.</div>
