--- a/src/app/service-provider/sp-approved-request/sp-approved-request.component.html
+++ b/src/app/service-provider/sp-approved-request/sp-approved-request.component.html
@@ -8,102 +8,60 @@
 <div *ngIf="!loading">
   <div *ngIf = "userAppointments">
     <div class="ui page stackable two column grid">
-      <div class="column" *ngFor="let item of userAppointments">
-        <div class="ui raised segment">
-          <span *ngIf="item.emergency == 'yes'">
-            <a class="ui red ribbon label">emergency</a>
-          </span>
+      <div class="sixteen wide column" >
+        <div class="ui stackable two cards">
+          <div class="card" *ngFor="let item of userAppointments" [ngClass]="{disabled : item.unavailable == 'true'}">
+          
 
           <div class="content">
-            <img class="right floated ui mini image" src = "{{item.imgurl}}">
+            <img class="right floated ui tiny image" src = "{{item.imgurl}}">
             <div class="header">
-              <span>{{item.username}}</span>
+              <span *ngIf="item.emergency == 'yes'">
+                <a class="ui red ribbon label" id="mon3">emergency</a>
+              </span>
+              <h3 id="mon3">{{item.username}}</h3>
+              <button class="ui tiny inverted blue button" [routerLink]="['/User_Requested_Appointment_Detail', item.apid]">
+                  <i class="unordered list icon"></i>
+                  View Appointment Details
+              </button>
             </div>
-              <span style="margin:10px;" class="ui small right floated olive tag label">{{item.time}}</span>
-              <span style="margin:10px;" class="ui small right floated teal tag label">{{item.date}}</span>
+            <div class="meta">
+              <span style="margin:10px;" class="ui small right floated olive tag label" id="mon3">{{item.time}}</span>
+              <span style="margin:10px;" class="ui small right floated teal tag label" id="mon3">{{item.date}}</span>
+              <span *ngIf="item.state == 'completed'">
+                <span style="margin:10px;" class="ui small right floated green tag label" id="mon3">{{item.state}}</span>
+              </span>
+            </div>
             <div class="description">
               <table class="ui small definition unstackable table">
                 <tr>
-                  <td class="active"><b>Phone</b></td>
-                  <td>{{item.userPh}}</td>
+                  <td class="active" id="mon3"><b>Phone</b></td>
+                  <td id="mon3">{{item.phone}}</td>
                 </tr>
 
                 <tr>
-                  <td class="active"><b>Address</b></td>
-                  <td>{{item.userAddress}}</td>
+                  <td class="active" id="mon3"><b>Address</b></td>
+                  <td id="mon3">{{item.address}}</td>
                 </tr>
 
                 <tr>
-                  <td class="active"><b>Device</b></td>
-                  <td>{{item.device}}</td>
+                  <td class="active" id="mon3"><b>Device</b></td>
+                  <td id="mon3">{{item.device}}</td>
                 </tr>
 
-                <tr>
-                  <td class="active"><b>Description</b></td>
-                  <td>{{item.description}}</td>
-                </tr>
-
-                <tr>
-                  <td class="active"><b>Brand</b></td>
-                  <td>{{item.brand}}</td>
-                </tr>
               </table>
-              <div class="ui small button" (click)="appointmentAction(item.$key,'cancel')">Call to Cancel</div>
             </div>
           </div>
+          <div class="extra content">
+            <div class="ui teal small button" id="mon3"><a href="tel:{{item.phone}}">Call to cancel</a></div>
+            <div class="ui red small button" id="mon3" data-tooltip="Please make a phone call first for cancelling appointment." (click)="appointmentAction(item.apid,item.uid,item.spid,item.date,item.time,item.device,'cancel')">Cancel</div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
   </div>
-  <!--<div *ngFor="let item of userAppointments">
-    <div class="ui stacked segment">
-      <div class="header">
-        <span *ngIf="item.emergency == 'yes'">
-          <a class="ui red  ribbon label" >emergency</a>
-        </span>
-        <span style="float:right; margin-right:10px;" class="ui medium right floated olive tag label">{{item.time}}</span>
 
-        <span style="float:right; margin-right:10px;" class="ui medium right floated teal tag label">{{item.date}}</span>
-
-      </div>
-      <div class="content">
-        <table class="ui small definition table">
-
-          <tr>
-            <td class="active"><b>Name</b></td>
-            <td>{{item.username}}</td>
-          </tr>
-
-          <tr>
-            <td class="active"><b>Phone</b></td>
-            <td>{{item.userPh}}</td>
-          </tr>
-
-          <tr>
-            <td class="active"><b>Address</b></td>
-            <td>{{item.userAddress}}</td>
-          </tr>
-
-          <tr>
-            <td class="active"><b>Device</b></td>
-            <td>{{item.device}}</td>
-          </tr>
-
-          <tr>
-            <td class="active"><b>Description</b></td>
-            <td>{{item.description}}</td>
-          </tr>
-
-          <tr>
-            <td class="active"><b>Brand</b></td>
-            <td>{{item.brand}}</td>
-          </tr>
-        </table>
-        <div class="ui button" (click)="appointmentAction(item.$key,'cancel')">Call to Cancel</div>
-      </div>
-
-    </div>
-  </div>-->
   <div *ngIf = "userAppointments.length <= 0">
     <div class="ui centered container">
       <div class="ui page stackable column grid">
@@ -113,7 +71,7 @@
             <div class="row">
                 <div class="column">
                 <div class="ui center aligned floating message">
-                    <p>No Approved Appointments</p>
+                    <p id="mon3">No Approved Appointments</p>
                 </div>
                 </div>
             </div>
