--- a/src/app/user/user-get-appointment/user-get-appointment.component.html
+++ b/src/app/user/user-get-appointment/user-get-appointment.component.html
@@ -7,60 +7,76 @@
 
     <div class="ui very padded blue stacked segment">
 
-          <form class="ui form" (ngSubmit)="onSubmit(spForm.value)" #spForm="ngForm">
+          <form class="ui form" [formGroup] = "spForm" (ngSubmit)="onSubmit()">
 
+            <!--<div class="ui red message" *ngIf = "name.errors && (name.touched || name.dirty)" id="mon3"> 
+              Please enter your name
+            </div>
             <div class="field">
-              <label>Name</label>
-              <input type="text" name="name" placeholder="Name" [(ngModel)]="name" >
+              <label id="mon3">Name</label>
+              <input [formControl] = "name" required type="text" name="name" placeholder="Name"id="mon3">
+            </div>
+
+            <div class="ui red message" *ngIf = "ph.errors && (ph.touched || ph.dirty)" id="mon3">
+              Please enter your phone number
             </div>
 
             <div class="field">
-              <label>Phone</label>
-              <input type="text" name="ph" placeholder="Phone" [(ngModel)]="ph">
+              <label id="mon3">Phone</label>
+              <input [formControl] = "ph" type="text" name="ph" placeholder="Phone" id="mon3" required >
             </div>
 
             <div class="field">
-              <label>Email</label>
-              <input type="text" name="email" placeholder="Email" [(ngModel)]="email">
+              <label id="mon3">Email</label>
+              <input [formControl] = "email" type="email" name="email" placeholder="Email" id="mon3">
+            </div>
+
+            <div class="ui red message" *ngIf = "address.errors && (address.touched || address.dirty)" id="mon3">
+              Please enter your address
+            </div>-->
+
+            <div class="field" >
+              <label id="mon3">Address</label>
+              <input [formControl] = "address" type="text" name="address" placeholder="Address" id="mon3" required>
             </div>
 
             <div class="field">
-              <label>Address</label>
-              <input type="text" name="address" placeholder="Address" [(ngModel)]="address">
+              <label id="mon3">Description (Optional)</label>
+              <input [formControl] = "description" type="text" name="description" placeholder="Description" id="mon3">
             </div>
 
             <div class="field">
-              <label>Description (Optional)</label>
-              <input type="text" name="description" placeholder="Description" [(ngModel)]="description">
+              <label id="mon3">Brand (Optional)</label>
+              <input [formControl] = "brand" type="text" name="brand" placeholder="Brand" id="mon3">
             </div>
 
-            <div class="field">
-              <label>Brand (Optional)</label>
-              <input type="text" name="brand" placeholder="Brand" [(ngModel)]="brand">
+            <div class="ui red message" *ngIf = "time.errors && (time.touched || time.dirty)" id="mon3">
+              Please choose time slot
             </div>
 
              <div class="field">
-              <label>Time Slot</label>
-              <select  class="ui dropdown" [(ngModel)]="time" name="time">
+              <label id="mon3">Time Slot</label>
+              <select required  class="ui dropdown" [formControl] = "time" name="time">
                 <option></option>
                 <option>9am - 12pm</option>
                 <option>12pm - 3pm</option>
                 <option>3pm - 6pm</option>
               </select>
             </div>
-          
+            
+
+            <div class="ui red message" *ngIf = "date.errors && (date.touched || date.dirty)" id="mon3">
+              Please choose date
+            </div>
 
             <div class="field">
-              <label>Date</label>
-              <select  class="ui dropdown"  [(ngModel)]="date" name="date">
+              <label id="mon3">Date</label>
+              <select required class="ui dropdown"  [formControl]="date" name="date">
                 <option *ngFor="let d of date2" [value]="d" >{{d}}</option>
               </select>
             </div>
-           
-           
-            
-          
-            <button class="ui blue button" type="submit">Get The Appointment</button>
+       
+            <button class="ui disabled blue button" type="submit" [ngClass] = "{disabled : spForm.invalid}" id="mon3">Get The Appointment</button>
           </form>
 
 </div>
