--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -1,45 +1,203 @@
-<br><br><br>
-
-<div class="imgsegment">
-  <h2 class="ui center aligned header">Phway Thant Chae</h2>
-  <br>
-<div class="ui page center aligned grid">
-  <div class="ui small image">
-    <img  src="{{imgurl}}">
-  </div>
-   
-</div>
-</div>
-
-<br><br>
+<br><br><br><br>
 
 <div class="spinner" *ngIf="loading">
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div>
-       
+
 <div *ngIf="!loading">
 
-<div class="ui centered grid">
-  <div class="eight wide computer twelve wide mobile column ">
-  <form class="ui large form" (ngSubmit)="onSubmit(userprofileForm.value)" #userprofileForm="ngForm">
-  
-  <div class="field">
-    <label>Phone Number</label>
-    <input type="text" name="ph" placeholder="Phone Number" [(ngModel)]="ph" >
+  <div class="ui center aligned grid">
+    <div class="computer only centered row">
+      <div class="three wide column computer">
+        <img width="150" height="150" src="{{imgurl}}">
+      </div>
+      <div class="ten wide column computer">
+        <h2 class="ui secondary dividing header" id="mon3">{{name}}</h2>
+        <a class="ui large teal label">
+          <i class="inverted black map pin icon"></i>
+          {{townshipString}}
+        </a>
+        <form class="ui form" [formGroup]="userprofileForm" (ngSubmit)="onSubmit()">
+
+          <div class="ui red message" *ngIf="ph.errors && (ph.touched || ph.dirty)" id="mon3">
+            Please fill your phone number
+          </div>
+
+          <div class="left aligned field">
+            <label id="mon3">Phone</label>
+            <div class="ui left icon input">
+              <i class="call icon"></i>
+              <input required [formControl]="ph" type="text" name="ph" placeholder="Phone Number" id="mon3">
+            </div>
+          </div>
+
+          <div class="ui red message" *ngIf="email.errors && (email.touched || email.dirty)" id="mon3">
+            Please enter correct email address
+          </div>
+
+          <div class="field">
+            <label id="mon3">Email</label>
+            <div class="ui left icon input">
+              <i class="mail icon"></i>
+              <input [formControl]="email" type="text" name="email" placeholder="Email" id="mon3">
+            </div>
+          </div>
+
+          <div class="field">
+              <label>Township</label>
+              <div class="ui left icon input">
+                <i class="map pin icon"></i>
+              <select [formControl] = "township" class="ui search dropdown" name="township">
+                <option value="">Select Township</option>
+                <option *ngFor ="let t of townships" value="{{t.name}}" id="mon3">{{t.name}}</option>
+              </select>
+              </div>
+          </div>
+
+          <div class="ui red message" *ngIf="address.errors && (address.touched || address.dirty)" id="mon3">
+            Please fill your address
+          </div>
+
+          <div class="field">
+            <label id="mon3">Address</label>
+            <textarea required rows="3" [formControl]="address" name="address" placeholder="Address" id="mon3"></textarea>
+          </div>
+
+          <button class="ui disabled secondary centered button" type="submit" [ngClass]="{disabled : userprofileForm.invalid }">
+          Update
+        </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="mobile only tablet only centered row">
+      <div class="twelve wide centered column">
+        <img width="150" height="150" src="{{imgurl}}" class="ui centered image"> <br>
+      </div>
+
+      <div class="twelve wide column">
+        <h2 class="ui secondary dividing header" id="mon3">{{name}}</h2>
+
+        <form class="ui form" [formGroup]="userprofileForm" (ngSubmit)="onSubmit()">
+
+          <div class="ui red message" *ngIf="ph.errors && (ph.touched || ph.dirty)" id="mon3">
+            Please fill your phone number
+          </div>
+
+          <div class="field">
+            <label id="mon3">Phone</label>
+            <div class="ui left icon input">
+              <i class="call icon"></i>
+              <input required [formControl]="ph" type="text" name="ph" placeholder="Phone Number" id="mon3">
+            </div>
+          </div>
+
+          <div class="ui red message" *ngIf="email.errors && (email.touched || email.dirty)" id="mon3">
+            Please enter correct email address
+          </div>
+
+          <div class="field">
+            <label id="mon3">Email</label>
+            <div class="ui left icon input">
+              <i class="mail icon"></i>
+              <input [formControl]="email" type="text" name="email" placeholder="Email" id="mon3">
+            </div>
+          </div>
+
+          <div class="ui red message" *ngIf="address.errors && (address.touched || address.dirty)" id="mon3">
+            Please fill your address
+          </div>
+
+          <div class="field">
+            <label id="mon3">Address</label>
+            <textarea required rows="3" [formControl]="address" name="address" placeholder="Address" id="mon3"></textarea>
+          </div>
+
+          <button class="ui disabled secondary centered button" type="submit" [ngClass]="{disabled : userprofileForm.invalid }">
+          Update
+        </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="center aligned four column row">
+      <div class="twelve wide column">
+        <h3 class="ui center aligned header">Past Appointments</h3>
+        <div class="ui horizontal divider">
+          <i class="large archive icon"></i>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="pastAppointments">
+      <div class="center aligned four column row">
+        <!--<div class="sixteen wide column">-->
+        <div class="ui centered two stackable cards">
+          <div class="card" *ngFor="let item of pastAppointments">
+            <div class="content">
+              <img class="right floated ui tiny image" src="{{item.spimg}}">
+              <div class="header">
+                <span *ngIf="item.emergency == 'yes'">
+                <a class="ui small red ribbon label">emergency</a>
+              </span>
+                <h3 id="mon3" [routerLink]="['/ServiceProvider_Profile', item.spid]"><a>{{item.company}}<small id="mon3">({{item.branch}})</small></a></h3>
+                <button class="ui tiny inverted blue button" [routerLink]="['/User_Requested_Appointment_Detail', item.apid]">
+                  <i class="unordered list icon"></i>
+                  View Appointment Details
+                </button>
+              </div>
+              <div class="meta">
+                <span *ngIf="item.state == 'pending'">
+                              <span style="margin:10px;" class="ui blue tag label" id="mon3">{{item.state}}</span>
+                </span>
+                <span *ngIf="item.state == 'completed'">
+                              <span style="margin:10px;" class="ui green tag label" id="mon3">{{item.state}}</span>
+                </span>
+                <span *ngIf="item.state == 'rescheduled'">
+                              <span style="margin:10px;" class="ui purple tag label" id="mon3">{{item.state}}</span>
+                </span>
+              </div>
+
+              <div class="description">
+                <table class="ui small definition unstackable table">
+                  <tr>
+                    <td class="active" id="mon3"><b>Device</b></td>
+                    <td id="mon3">{{item.device}}</td>
+                  </tr>
+                  <tr>
+                    <td class="active" id="mon3"><b>Date</b></td>
+                    <td id="mon3">{{item.date}}</td>
+                  </tr>
+                  <tr>
+                    <td class="active" id="mon3"><b>Time</b></td>
+                    <td id="mon3">{{item.time}}</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--</div>-->
+      </div>
+    </div>
+
+    <div *ngIf="pastAppointments.length <= 0">
+      <div class="ui centered container">
+        <div class="ui page stackable column grid">
+          <div class="row"></div>
+          <div class="row">
+            <div class="column">
+              <div class="ui center aligned floating message">
+                <p>No Past Appointments</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
-  <div class="field">
-    <label>Address</label>
-    <textarea name="address" placeholder="Address" [(ngModel)]="address"></textarea>
-  </div>
- 
-  <button class="ui secondary centered button" type="submit">
-  Update
-  </button>
-  </form>
-  </div>
-</div>
-
-</div>
-
+  <br>
